syntax = "proto3";

package healthcare;

service DoctorsService {
  rpc CreateDoctorServices(DoctorServices) returns (DoctorServices);
  rpc GetDoctorServiceById(GetReqStr) returns (DoctorServices);
  rpc GetAllDoctorServices(GetAllDoctorServiceS) returns (ListDoctorServices);
  rpc UpdateDoctorServices(DoctorServices) returns (DoctorServices);
  rpc DeleteDoctorService(GetReqStr) returns (Status);
}


message DoctorServices {
  string id = 1;
  int32 doctor_service_order = 2;
  string doctor_id = 3;
  string specialization_id = 4;
  float online_price = 5;
  float offline_price = 6;
  string created_at = 7;
  string updated_at = 8;
  string deleted_at = 9;
}

message ListDoctorServices {
  repeated DoctorServices doctor_services = 1;
}

message GetReqStr{
  string id = 1;
  bool is_active = 2;
  bool is_hard_deleted = 3;

}

message GetAllDoctorServiceS {
  int64 page = 1;
  int64 limit = 2;
  string search = 3;
}

message Status {
  bool status = 1;
}

